--- a/app/views/versions/_info.html.erb
+++ b/app/views/versions/_info.html.erb
@@ -112,7 +112,7 @@
       <td class="checkbox"><%= check_box_tag("ids[]", issue.id) %></td>
       <td align="left">
         <div class="tooltip">
-          <%= tab %>
+          <%== tab %>
           <font color="<%= color %>"><%= begin_strike %>
             <%= link_to_issue(issue, :project => (@project != issue.project)) %>
           <%= end_strike %></font>
