--- a/assets/stylesheets/advanced_roadmap.css
+++ b/assets/stylesheets/advanced_roadmap.css
@@ -1,9 +1,21 @@
 .icon-milestone
 {
-	background-image:		url(../images/milestone.png);
+	background-image:		url("../images/milestone.png");
 }
 
 .icon-milestones
 {
-	background-image:		url(../images/milestones.png);
+	background-image:		url("../images/milestones.png");
+}
+
+.collapse .toggle {
+    background: url("../images/collapse.gif");
+}
+.expand .toggle {
+    background: url("../images/expand.gif");
+}
+.toggle {
+    height: 9px;
+    width: 9px;
+    display: inline-block;   
 }
